# concurrency-problems

.github/workflows/: release.yml
problem06/: CMakeLists.txt  main.cpp  sleepsort.cpp  sleepsort.h  sleepsort_test.cpp
problem07/: CMakeLists.txt  main.cpp  parallel-cp.cpp  parallel-cp.h  test_parallel-cp.cpp
problem08/: CMakeLists.txt  leibnitz_pi.cpp  leibnitz_pi.h  main.cpp  test_leibnitz_pi.cpp
problem10/: CMakeLists.txt  main.cpp  philosopher.cpp  philosopher.h  test_lib.cpp
problem21/: CMakeLists.txt  list.cpp  list.h  main.cpp  synchronized.h  test_list.cpp
problem24/: CMakeLists.txt  main.cpp  production_line.cpp  production_line.h  test_production_line.cpp
problem26/: CMakeLists.txt  main.cpp  queue.cpp  queue.h  test_queue.cpp
